--- a/CSS/clases.css
+++ b/CSS/clases.css
@@ -90,8 +90,7 @@ main{
   background-color: #7a777756;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(35, 202, 13, 0.541);
-  border: 1px solid #ddd;
+  border: 1px solid #00000000;
   flex-basis: 48%;
   flex-direction: column;
   align-items: center;
@@ -106,8 +105,6 @@ main{
   color: #faf4f4;
   text-align: left;
   width: 100%;
-  
-
 }
 .columna1 ul.recommendations {
   list-style: disc;
@@ -121,9 +118,17 @@ main{
   margin-bottom: 10px;
   line-height: 1.5;
 }
-.columna1 img{
-  width: 100%;
+.contenidouno .columna1 img{
+  width: 90%;
   height: auto;
+  border-radius: 10px;
+}
+
+.contenidouno .columna2 img {
+  width: 40%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
   border-radius: 10px;
 }
 .columna1 .precioinfo{
@@ -147,12 +152,7 @@ main{
   margin-bottom: 15px;
   color: #0a0808;
 }
-.columna2 img{
-  width: 50%;
-  height: 70%;
-  border-radius: 10px;
-}
-.columna1 p, .columna2 p {
+.columna1 p {
   text-align: justify;
   font-size: 18px;
   line-height: 1.6;
@@ -160,153 +160,75 @@ main{
   font-family: "Arima";
 }
 
-
-/*
-.principal{
-    text-align: center;
-    padding: 20px;
-    background-color: #555;
-    }
-
-.principal h2 {
-    margin-bottom: 20px;
-    font-size: 4em;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    color: #0c0707;
-    font-family: "Archivo Black";
-    margin-top: 120px;
+.columna2 p{
+  margin-top: 15px;
+  text-align: justify;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #f3eeee;
 }
-.contenidouno {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    gap: 20px;
 
+/*creando la seccion 02 del contenido de la pagina*/
+.segundaseccion{
+  padding: 20px;
+  text-align: center;
+  background-color: #000000;
+
+}
+.contenidodos{
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+  
 }
 .columna {
-    background-color: #f4f4f4;
-    padding: 20px;
-    width: 45%; /* Ajusta el tamaño de la columna al 45% para que quepan dos en una fila 
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 300px;
-    transition: transform 0.3s, box-shadow 0.3s;
+  width: 80%; 
+  height: 300px; 
+  background-color: #7a777756;
+  border-radius: 10px; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; 
+  text-align: left;
+  position: relative;
+}
+.columna h2 {
+  font-size: 32px;
+  margin-bottom: 10px;
+  color: whitesmoke;
 }
 .columna img {
-    width: 100%;
-    height: 40%;
-    object-fit: cover;
-    border-radius: 8px ;
-    margin-bottom: 15px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 250px; 
+  height: 250px;
+  margin: 0 auto; 
 }
 .columna p {
-    font-size: 1em;
-    color: #555;
-    margin-top: 15px;
+  font-size: 20px;
+  margin-bottom: 20px;
+  color: #ddd;
 }
-.columna:hover {
-    transform: scale(1.05);
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+
+.contenidodos a{
+  display: inline-block;
+  font-size: 18px;
+  color: #000000;
+  background-color:  #f82d098b;
+  padding:  10px 20px;
+  text-align: center;
+  border-radius: 5px;
+  text-decoration: none;
+  margin: 0 auto;
 }
-*/
-/*creando la seccion 03 del contenido de la pagina*/
+.columna a:hover {
+  background-color: #b30600; 
+}
 
-.galeria {
-    text-align: center;
-    padding: 20px;
-    background-color: #555;
-    }
 
-  .galeria h2 {
-    color: #fffefe;
-    font-size: 2.5em;
-    margin-bottom: 40px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    display: inline-block;
-    padding-bottom: 10px;
-    font-family: "Archivo Black"
-  }
-
-  .galeria p {
-    font-size: 1.2em;
-    color: #555;
-    margin-bottom: 30px;
-  }
-
-  .contenidotres {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    gap: 20px;
-
-  
-  }
-
-  .contenidotres .columna {
-    background-color: #f0f4f870;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgb(12, 223, 82);
-    padding: 20px;
-    max-width: 300px;
-    text-align: center;
-    transition: transform 0.3s, box-shadow 0.3s;
-  }
-
-   .contenidotres .columna:hover{
-    transform: translateY(-10);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    
-   }
-
-   .contenidotres .columna h2{
-    font-size: 1.5em;
-    margin-bottom: 15px;
-    color: #1b1818;
-   }
-  
-  .contenidotres .columna img {
-    width: 100%;
-    height: 40%;
-    object-fit: cover;
-    border-radius: 8px ;
-    margin-bottom: 15px;
-  }
-
-  .contenidotres .columna p {
-    color: #333;
-    margin: 10px 0;
-    font-family: "Varela Round";
-  }
-
-  .contenidotres .columna a {
-    display: inline-block;
-    background-color: #007bff00;
-    color: rgb(19, 12, 12);
-    padding: 10px 20px;
-    margin-top: 10px;
-    border-radius: 5px;
-    text-decoration: none;
-    font-weight: bold;
-    transition: background-color 0.3s, transform 0.3s;
-    text-align: center;
-    font-family: sans-serif;
-
-  }
-
-  .columna a:hover {
-    background-color: #d30909f5;
-    transform: translateY(-3px);
-    text-decoration: none;
-  }
-
-  
-  
   /*creando el Footer - pie de pagina final de
   la pagina*/
   
@@ -329,6 +251,7 @@ main{
     font-size: 1.8em;
     color: #f31912; 
     margin-bottom: 15px;
+    font-family: "Montserrat";
   }
   .footer p {
     font-size: 1.1em;
