--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -1,14 +1,15 @@
 *{
     margin: 0;
     padding: 0;
+    
 }
 
 header{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #0f0e0ede;
-    box-shadow: 0px 2px 5px rgba(63, 55, 55, 0.678);
+    background-color: #0f0e0e;
+    box-shadow: 0px 2px 5px rgb(32, 206, 41);
     position: fixed;
     top: 0;
     width: 100%;
@@ -62,7 +63,9 @@ nav li a:hover{
     border-radius: 50%;   
 
 }
-
+main{
+  margin-top: 100px;
+}
 /* aquì se implementan los estilos css para la seccion uno*/
 
 .principal {
@@ -72,7 +75,6 @@ nav li a:hover{
     justify-content: center;
     overflow: hidden;
     position: relative;
-    margin-top: 120px;
 }
 .principal video{
     position: absolute;
@@ -171,21 +173,23 @@ nav li a:hover{
 
   .contenidotres {
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
+    width: 100%;
 
   
   }
 
   .contenidotres .columna {
+    width: 24%;
     background-color: #f0f4f870;
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: 0 4px 8px rgb(12, 223, 82);
     padding: 20px;
-    max-width: 300px;
+    max-width: 800px;
     text-align: center;
     transition: transform 0.3s, box-shadow 0.3s;
+    flex-grow: 1;
   }
 
    .contenidotres .columna:hover{
@@ -259,6 +263,7 @@ nav li a:hover{
     font-size: 1.8em;
     color: #f31912; 
     margin-bottom: 15px;
+    font-family: "Montserrat";
   }
   .footer p {
     font-size: 1.1em;
