--- a/CSS/clases.css
+++ b/CSS/clases.css
@@ -229,6 +229,79 @@ main{
 }
 
 
+
+.galeria {
+    text-align: center;
+    padding: 20px;
+    background-color: #555;
+    }
+
+  .contenidotres{
+    display: flex;
+
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    border: 2px solid transparent;
+    border-radius: 10px;
+    background-color: #312e2e;
+    max-width: 1000px;
+    margin: 20px auto;
+
+  }
+ .columna{
+  flex-basis: 60%;
+  text-align: left;
+ }
+ .columna img {
+  width: 150px;
+  height: auto;
+  margin-left: 20px;
+  margin-right: 20px;
+  
+ }
+ .columna h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+.columna p {
+  font-size: 18px;
+  margin: 10px 0;
+}
+.columna a {
+  display: inline-block;
+  background-color: red; 
+  color: white; 
+  padding: 10px 20px; 
+  border-radius: 5px; 
+  text-decoration: none; 
+  font-size: 16px;
+  margin-top: 20px;
+}
+.columna a:hover {
+  background-color: darkred; 
+}
+  .contenidotres .columna img {
+    width: 100%;
+    height: 40%;
+    object-fit: cover;
+    border-radius: 8px ;
+    margin-bottom: 15px;
+    mix-blend-mode: multiply;
+  }
+
+  
+  
+
+  .columna a:hover {
+    background-color: #d30909f5;
+    transform: translateY(-3px);
+    text-decoration: none;
+  }
+
+  **/
+  
+
   /*creando el Footer - pie de pagina final de
   la pagina*/
   
